--- a/search.html
+++ b/search.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Search</title>
-    <link rel="stylesheet" href="form.css"> <!-- Link to your external CSS stylesheet -->
+    <link rel="stylesheet" href="form.css"> 
 </head>
 <body class="dec">
     <div class="card">
@@ -13,7 +13,7 @@
                 <p id="heading">Search Contact by Registration Number</p>
                 <div class="field">
                     <svg viewBox="0 0 16 16" fill="currentColor" height="16" width="16" xmlns="http://www.w3.org/2000/svg" class="input-icon">
-                        <!-- Your SVG path for the icon -->
+                      
                     </svg>
                     <input type="text" class="input-field" name="search_registration_number" placeholder="Enter Registration Number" required>
                 </div>
@@ -26,7 +26,7 @@
     </div>
 
     <script>
-        // JavaScript to close the window when the "Close" button is clicked
+ 
         document.getElementById("closeButton").addEventListener("click", function() {
             window.close();
         });
